# my_headhunter_bot

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.tests.yml  docker-compose.yml  flower.Dockerfile  main.py  pyproject.toml  requirements.txt  services.py
.github/workflows/: cd.yml  ci.yml
config/config/: settings.py  urls.py
config/core/: admin.py  enums.py  forms.py  models.py  services.py  tasks.py
config/core/management/commands/: bot.py  get_areas.py  parse_api_hh_ru.py  parse_hh_ru.py  update_status_vacancy.py  update_vacancy.py
config/core/migrations/: 0001_initial.py  0002_area_alter_vacancy_options.py  0003_alter_area_parent_id.py  0004_alter_area_parent_id.py  0005_alter_vacancy_salary.py  0006_vacancy_area_alter_vacancy_status.py  0007_alter_vacancy_area.py  0008_alter_vacancy_area.py  0009_profile_message.py  0010_alter_profile_external_id.py  0011_area_in_search.py  0012_searchquery.py  0013_auto_20220401_1349.py  0014_vacancy_watch.py  0015_alter_vacancy_status.py  0016_alter_vacancy_status.py
