[tool.poetry]
name = "my-headhunter-bot"
version = "0.1.0"
description = ""
authors = ["Alfir Tyakin <alfir7777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
django = "3.2.11"
celery = "5.3.6"
sentry-sdk = "0.10.2"
python-dotenv = "0.19.2"
django-celery-beat = "2.2.1"
whitenoise = "6.0.0"
psycopg2-binary = "2.9.10"
gunicorn = "20.1.0"
python-telegram-bot = "13.11"
pandas = "2.2.3"
requests = "2.27.1"
redis = "4.1.4"


[tool.poetry.group.flower.dependencies]
flower = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

