[tool.poetry]
name = "my-headhunter-bot"
version = "0.1.0"
description = ""
authors = ["Alfir Tyakin <alfir7777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
django = "^5.1.5"
celery = "^5.4.0"
sentry-sdk = "0.10.2"
python-dotenv = "^1.0.1"
django-celery-beat = "^2.7.0"
whitenoise = "^6.8.2"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
python-telegram-bot = "13.15"
pandas = "^2.2.3"
requests = "2.27.1"
redis = "^5.2.1"


[tool.poetry.group.flower.dependencies]
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

